@startuml uml-skill-types
!include ../common/book-clean.puml

package "llm_agents_from_scratch.data_structures.skill" <<Folder>> {

  enum SkillScope {
    PROJECT = 'project'
    USER = 'user'
  }

  class SkillFrontmatter <<Pydantic BaseModel>> {
    +name: str
    +description: str
    +license: str | None
    +compatibility: str | None
    +metadata: dict[str, str] | None
    +allowed_tools: str | None
  }
}

package "llm_agents_from_scratch.skills.skill" <<Folder>> {

  class Skill {
    +frontmatter: SkillFrontmatter
    +location: Path
    +scope: SkillScope
    --
    +resources: list[Path]
    +read_body(): str
    +catalog(): str
  }
}

' Relations
Skill --> SkillFrontmatter : " has"
Skill --> SkillScope : " has"

@enduml
